--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/styled-system": "^5.1.15",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "chart.js": "^3.9.1",
+    "date-fns": "^2.29.3",
     "history": "^5.3.0",
     "modern-normalize": "^1.1.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
